@@ -3,8 +3,15 @@ package com.intelsenseai.controller;
 import com.intelsenseai.dto.FeedbackRequest;
 import com.intelsenseai.entity.Feedback;
 import com.intelsenseai.service.FeedbackService;
+import jakarta.validation.Valid;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
+import java.util.Map;
 
 @RestController
 @RequestMapping("/api/feedback")
@@ -17,20 +24,35 @@ public class FeedbackController {
     }
 
     @PostMapping
-    public ResponseEntity<Feedback> submit(@RequestBody FeedbackRequest request) {
+    public ResponseEntity<?> submit(@Valid @RequestBody FeedbackRequest request) {
         Feedback saved = feedbackService.submitFeedback(request.getText(), request.getSource());
-        return ResponseEntity.ok(saved);
+        return ResponseEntity.status(HttpStatus.CREATED).body(Map.of(
+                "id", saved.getId(),
+                "text", saved.getText(),
+                "source", saved.getSource(),
+                "aiResult", saved.getAiResult(),
+                "createdBy", saved.getCreatedBy(),
+                "createdAt", saved.getCreatedAt()
+        ));
     }
 
     @GetMapping
-    public ResponseEntity<java.util.List<Feedback>> listForCurrentUser() {
+    public ResponseEntity<List<Map<String, Object>>> listForCurrentUser() {
         try {
-            org.springframework.security.core.Authentication auth = org.springframework.security.core.context.SecurityContextHolder.getContext().getAuthentication();
+            Authentication auth = SecurityContextHolder.getContext().getAuthentication();
             String username = (auth != null) ? auth.getName() : null;
-            java.util.List<Feedback> items = feedbackService.findByUser(username);
-            return ResponseEntity.ok(items);
+            List<Feedback> items = feedbackService.findByUser(username);
+            List<Map<String, Object>> payload = items.stream().map(item -> Map.<String, Object>of(
+                    "id", item.getId(),
+                    "text", item.getText(),
+                    "source", item.getSource(),
+                    "aiResult", item.getAiResult(),
+                    "createdBy", item.getCreatedBy(),
+                    "createdAt", item.getCreatedAt()
+            )).toList();
+            return ResponseEntity.ok(payload);
         } catch (Exception e) {
-            return ResponseEntity.status(500).body(java.util.Collections.emptyList());
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(List.of());
         }
     }
 }
